# pqwan

./: .gitattributes  .gitignore  README.md  go.work  go.work.sum
industry/: README.md  心得体会.md
raw-examples/: README.md
raw-examples/AOI/: README.md
raw-examples/AOI/lighthouse/: CMakeLists.txt  aoi.cpp  aoi.h  helper.cpp  helper.h  main.cpp  map.cpp  map.h  object.cpp  object.h  singleton.h
raw-examples/AOI/tiles/: CMakeLists.txt  main.cpp
raw-examples/AStar/: README.md  astar.py  main.py  map.py  requirements.txt  show_tian.py  vec2.py
raw-examples/CppWithJs/: README.md
raw-examples/CppWithJs/calc/: JsEnv.cpp  JsEnv.h  helper.js  index.js  main.cpp  main.js  util.cpp  util.h  xmake.lua
raw-examples/CppWithJs/calc/builtins/: bootstrap.js
raw-examples/CppWithJs/calc/builtins/libs/: module.js
raw-examples/CppWithLua/lua54/: luacore.h  xmake.lua
raw-examples/CppWithLua/stopwatch/: helper.lua  luai.cpp  luai.h  main.cpp  main.lua  stopwatch.cpp  stopwatch.h  xmake.lua
raw-examples/PrimMaze/: README.md  __init__.py  main.py  prim.py
raw-examples/ecs/: README.md
raw-examples/game-backend/: README.md  go.work  go.work.sum
raw-examples/game-backend/db-proxy/: go.mod  main.go  mongo-client.go
raw-examples/game-backend/db-proxy/protos/: hello.pb.go  hello_grpc.pb.go  player.pb.go  player_grpc.pb.go
raw-examples/game-backend/gameLogic/: go.mod  main.go  rpc-client.go
raw-examples/game-backend/localCache/: go.mod  go.sum  main.go
raw-examples/game-backend/pprotos/: go.mod  hello.pb.go  hello_grpc.pb.go  player.pb.go  player_grpc.pb.go
raw-examples/game-backend/protos/: gen.bat  gen.sh  hello.proto  player.proto
raw-examples/learn-opengl/: README.md
raw-examples/learn-opengl/introduction/camera/: CMakeLists.txt  main.cpp
raw-examples/learn-opengl/introduction/coordinate/: CMakeLists.txt  helper.cpp  helper.h  main.cpp  shader.vert
raw-examples/learn-opengl/introduction/texture/: CMakeLists.txt  shader.frag  shader.vert
raw-examples/learn-opengl/introduction/transformation/: main.cpp  shader.vert
raw-examples/learn-opengl/introduction/triangle/1/: CMakeLists.txt
raw-examples/learn-opengl/introduction/triangle/2/: CMakeLists.txt  shader.vert
raw-examples/learn-opengl/introduction/window/: CMakeLists.txt
raw-examples/learn-opengl/lighting/basic-lighting/: CMakeLists.txt  main.cpp
raw-examples/learn-opengl/lighting/color/: CMakeLists.txt  light_shader.vert  main.cpp  shader.frag
raw-examples/learn-opengl/lighting/material/: CMakeLists.txt  main.cpp  shader.frag  shader.vert
raw-examples/learn-opengl/util/: CMakeLists.txt  test.cpp  util.cpp  util.h
raw-examples/learn-unity/: README.md
raw-examples/learn-unreal/: README.md
raw-examples/learnopengl/: README.md
raw-examples/learnopengl/introduction/rectangle/: CMakeLists.txt  main.cpp
raw-examples/learnopengl/introduction/texture/: main.cpp
raw-examples/learnopengl/introduction/transformation/: CMakeLists.txt
raw-examples/learnopengl/introduction/triangle/2/: shader.frag
raw-examples/learnopengl/util/: CMakeLists.txt
raw-examples/opengl/: README.md
raw-examples/opengl/rectangle/: CMakeLists.txt  main.cpp
raw-examples/opengl/texture/: CMakeLists.txt  main.cpp  shader.frag
raw-examples/opengl/triangle/: CMakeLists.txt  main.cpp
raw-examples/opengl/triangle/1/: CMakeLists.txt  main.cpp
raw-examples/opengl/triangle/2/: CMakeLists.txt  main.cpp  shader.frag
raw-examples/opengl/util/: CMakeLists.txt  test.cpp  util.h
raw-examples/opengl/window/: CMakeLists.txt  main.cpp
raw-examples/simd/: CMakeLists.txt  main.cpp
